--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
-    "pm2": "^0.15.10"
+    "pm2": "^0.15.10",
+    "tiny-sse": "0.0.0"
   },
   "devDependencies": {}
 }
